--- a/projet/src/MenuPatient.form
+++ b/projet/src/MenuPatient.form
@@ -40,7 +40,10 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                  <Component id="JReturnNom" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="JReturnRDV" min="-2" max="-2" attributes="0"/>
+                      <Component id="JReturnNom" min="-2" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace pref="380" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -50,7 +53,9 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="JReturnNom" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="278" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+                  <Component id="JReturnRDV" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="231" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -59,6 +64,11 @@
         <Component class="javax.swing.JLabel" name="JReturnNom">
           <Properties>
             <Property name="text" type="java.lang.String" value="Bonjour *Name*"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="JReturnRDV">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Prochain *RDV*"/>
           </Properties>
         </Component>
       </SubComponents>
